[gd_scene load_steps=12 format=2]

[ext_resource path="res://Elementos/Visuais/Fundo/TelaCarregamento.jpg" type="Texture" id=1]
[ext_resource path="res://Cenas/Fontes/FonteComicSansMS.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Fontes/FonteJokerman.tscn" type="PackedScene" id=3]
[ext_resource path="res://Elementos/Textuais/Jokerman/JOKERMAN.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Elementos/Textuais/ComicSansMS/comic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Elementos/Visuais/Mao/MaoAuxilicar.png" type="Texture" id=6]
[ext_resource path="res://Codigos/Cenas/TelaInicial.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 100
outline_size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 46
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "Padrao"
length = 40.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mao:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 15, 20, 22, 35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mao:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.5, 5, 5.8, 15, 20, 22, 23.4, 25, 26, 35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Mao:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3.5, 5.8, 20, 22, 23, 26 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 743 ), Vector2( 512, 743 ), Vector2( 512, 280 ), Vector2( 512, 280 ), Vector2( 512, 743 ), Vector2( 512, 743 ), Vector2( 512, 280 ), Vector2( 512, 280 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Mao:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.2, 3.5, 3.8, 4.1, 4.5, 20, 23.3, 23.6, 23.9, 24.2, 24.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 28.5, 0.0, 28.5, 0.0, 0.0, 0.0, 28.5, 0.0, 28.5, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Fundo:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 40 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Titulo:anchor_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.9, 1.0, 1.1, 1.0, 0.9, 1.0, 1.1, 1.0, 0.9, 1.0, 1.1, 1.0, 0.9, 1.0, 1.1, 1.0, 0.9, 1.0, 1.1, 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Transicao"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Transicao:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Transicao:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TelaInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" parent="." instance=ExtResource( 3 )]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.233
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.784314, 0.784314, 1 )
text = "Inf√¢ncia Segura"
align = 1

[node name="TextoDestravar" parent="." instance=ExtResource( 2 )]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -11.5
margin_bottom = 11.5
custom_fonts/font = SubResource( 2 )
text = "Destravar"
align = 1
valign = 1

[node name="TextoVersao" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -80.0
margin_right = -10.0
custom_fonts/font = SubResource( 2 )
text = "TextoVersao"
valign = 1

[node name="Mao" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 383.0
margin_right = 128.0
margin_bottom = 639.006
rect_pivot_offset = Vector2( 128, 240 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transicao" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="AnimarElementos" type="AnimationPlayer" parent="."]
autoplay = "Padrao"
anims/Padrao = SubResource( 3 )

[node name="AnimarTransicao" type="AnimationPlayer" parent="."]
anims/Transicao = SubResource( 4 )

[connection signal="gui_input" from="." to="." method="_Toque"]
[connection signal="animation_finished" from="AnimarTransicao" to="." method="_FimTransicao"]
